[package]
name = "monitoring"
version = "0.1.0"
edition = "2021"

[dependencies]
infra = { path = "../infra" }
serde = "1.0.192"
serde_json = "1.0.108"
eventstore = "2.3.0"
tokio = { version = "1.34.0", features = ["rt", "rt-multi-thread", "macros"] }
bytes = "1.5.0"
uuid = { version = "1.5.0", features = ["v4"] }
