[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
infra = { path = "../infra" }
monitoring = { path = "../monitoring" }
serde = "1.0.192"
serde_json = "1.0.108"
eventstore = "2.3.0"
tokio = { version = "1.34.0", features = ["rt", "rt-multi-thread", "macros", "full"] }
bytes = "1.5.0"
uuid = { version = "1.5.0", features = ["v4"] }
wasmtime = { version =  "16.0.0", features = ["component-model"] }
rand = "0.8.5"
